--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js --ignore tests",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "client": "npm run dev --prefix client",
+    "start1": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "concurrently": "^7.6.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "mongoose": "^6.10.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.20"
   }
 }
