--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "client": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,12 +11,16 @@
   "dependencies": {
     "@material-tailwind/react": "^1.4.2",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "redux": "^4.2.1",
+    "redux-form": "^8.3.9",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
