--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js --ignore tests",
-    "client": "npm run dev --prefix client",
-    "start1": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm run client --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "colors": "^1.4.0",
     "concurrently": "^7.6.0",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -20,6 +21,8 @@
     "jade": "~1.11.0",
     "mongoose": "^6.10.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
