--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^1.4.2",
-    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "cookies": "^0.8.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "js-cookie": "^3.0.1",
@@ -19,10 +19,7 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "redux": "^4.2.1",
-    "redux-form": "^8.3.9",
-    "redux-thunk": "^2.4.2"
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
