--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js",
     "server": "nodemon server.js --ignore tests",
     "client": "npm run client --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,6 +21,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "morgan": "~1.9.1",
@@ -27,6 +29,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^19.7.5",
     "redis": "^2.8.0"
   }
 }
