--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^19.7.5",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "safe-buffer": "^5.2.1"
   }
 }
