--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.1346.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^7.6.0",
@@ -21,7 +22,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "jest": "^22.1.4",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "morgan": "~1.9.1",
@@ -29,8 +30,9 @@
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
-    "puppeteer": "^1.0.0",
+    "puppeteer": "^19.8.0",
     "redis": "^2.8.0",
-    "safe-buffer": "^5.2.1"
+    "safe-buffer": "^5.2.1",
+    "uuid": "^9.0.0"
   }
 }
